feat(bacnet): implementation improvements